src/modules/ec2/security_groups.tf
data "aws_vpc" "vpc_main" {
  id = var.vpc_id
}

resource "aws_security_group" "bastion_sg_1" {
    name = "bastion-sg-bastion"
    vpc_id = data.aws_vpc.vpc_main.id
    description = "Permitir SSH"

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 8080
        to_port = 8080
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "bastion-sg-bastion"
    }
}
